# blastdb

./: CMakeLists.txt  README.md  taskfile.yml
.cache/clangd/index/: libblast.cpp.D8CBA1B836E03AC0.idx  libblast.h.7B6F4FBF9C5749BB.idx  main.cpp.BAA15BF1F3671C85.idx
blastcli/: CMakeLists.txt
blastcli/src/: main.cpp
libblast/: CMakeLists.txt
libblast/include/libblast/: libblast.h
libblast/src/: libblast.cpp
